Margin/contrast fixes

--- a/_sass/layouts/_goal-by-target-vertical.scss
+++ b/_sass/layouts/_goal-by-target-vertical.scss
@@ -91,12 +91,4 @@ $goal-by-target-indentation: 60px;
   .status, .tags {
     margin-left: $goal-by-target-indentation;
   }
-
-  &.contrast-high {
-    .tags {
-      .tag {
-        color: $color-dark-highContrast;
-      }
-    }
-  }
 }
