--- a/_sass/layouts/_goal.scss
+++ b/_sass/layouts/_goal.scss
@@ -7,8 +7,10 @@
 
 .layout-goal {
   .tags {
+    display: inline-block;
     margin-top: 0;
     margin-left: 10px;
+    margin-bottom: 15px;
   }
 }
 
@@ -24,7 +26,7 @@ body.contrast-high {
       &.target {
         color: $color-light-highContrast !important;
       }
-      span.status, .tags li{
+      span.status, .tags .tag {
         color: $color-dark-highContrast !important;
       }
 
